--- a/source/include/header.html
+++ b/source/include/header.html
@@ -139,7 +139,11 @@
             <a class="nav-link nav-link2 saleNavItem" href="#">SALE</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link nav-link3 productNavItem" href="#">SẢN PHẨM</a>
+            <a
+              class="nav-link nav-link3 productNavItem"
+              href="../index.php?mod=product"
+              >SẢN PHẨM</a
+            >
           </li>
           <li class="nav-item">
             <a class="nav-link nav-link4 collectionNavItem" href="#"
