--- a/source/styles/product_detail.css
+++ b/source/styles/product_detail.css
@@ -1,17 +1,110 @@
 /* style.css */
 .product-container {
   display: flex;
+
   flex-wrap: wrap;
   gap: 30px;
   max-width: 95%;
   margin: 50px auto;
   padding: 20px;
   border-radius: 10px;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 10px 13px 20px rgba(0, 0, 0, 0.1);
 }
 
 .product-image {
   flex: 1;
+  position: relative;
+}
+
+.slide-image {
+  display: none;
+  opacity: 0;
+  transition: opacity 1s ease-in-out;
+}
+
+.slide-image:first-child {
+  display: block;
+}
+
+.prevImage,
+.nextImage {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  transform: translateY(-100%);
+  padding: 10px;
+  color: white;
+  background-color: #000;
+  opacity: 0.1;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+.prevImage {
+  left: 0;
+  margin: 0 !important;
+  border-radius: 3px 0 0 3px;
+}
+
+.nextImage {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+.prevImage:hover,
+.nextImage:hover {
+  opacity: 0.7;
+  background-color: #000000;
+  color: white;
+  font-size: larger;
+}
+
+.prevImage {
+  margin-left: 10%;
+}
+
+.nextImage {
+  margin-right: 10%;
+}
+
+/* Dots hiệu ứng */
+.dots-container {
+  text-align: center;
+  padding: 10px 0;
+  width: 100%;
+}
+
+.dot {
+  cursor: pointer;
+  height: 10px;
+  width: 10px;
+  margin: 0;
+  display: inline-block;
+  top: 0;
+}
+
+.selected,
+.dot:hover {
+  background-color: #717171;
+}
+
+/* Hiệu ứng fade */
+.slide-image {
+  opacity: 1;
+  animation: fadeEffect 2s;
+}
+
+@keyframes fadeEffect {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 .product-info {
@@ -28,7 +121,7 @@
 
 .product-title {
   font-size: 28px;
-  margin-bottom: 10px;
+  margin-bottom: 15px;
   color: #333;
 }
 
@@ -82,12 +175,12 @@
 /* Số lượng */
 .product-quantity {
   margin-bottom: 20px;
-  display: inline !important;
+  display: flex;
+  align-items: center;
 }
 
 .quantity-wrapper {
-  display: flex;
-  align-items: center;
+  margin-left: 15px;
 }
 
 .quantity-btn {
@@ -98,7 +191,7 @@
 }
 
 #quantity {
-  width: 40px;
+  width: 50px;
   text-align: center;
   border: 1px solid #ddd;
   margin: 0 5px;
