--- a/source/include/header.html
+++ b/source/include/header.html
@@ -106,18 +106,31 @@
 
       <!--cart-->
       <div class="header__bottom__right__cart">
-        <i class="fa-solid fa-cart-shopping" style="color: #cca929"></i>
-        <div class="num">15</div>
-
+        <div class="btn-cart" id="btn-cart">
+          <i
+            class="fa-solid fa-cart-shopping cart-icon"
+            style="color: #cca929"
+          ></i>
+          <div class="num" id="num-product-in-cart">0</div>
+        </div>
+        <div class="bg-cart-dialog"></div>
         <!-- Dialog giỏ hàng -->
         <div id="cartDialog" class="cart-dialog">
           <div class="dialog-content">
-            <span class="close-btn" onclick="closeCartDialog()">&times;</span>
-            <h2>Giỏ Hàng</h2>
-            <div id="cartItems"></div>
+            <i
+              class="fa-solid fa-close close-dialog-btn"
+              onclick="closeCartDialog()"
+            ></i>
+            <div class="dialog-title">Giỏ Hàng</div>
+            <div id="cartItems">
+              <!-- <script src="cartEvent.js"></script> -->
+            </div>
+
             <div class="dialog-footer">
-              <button onclick="closeCartDialog()">Đóng</button>
-              <button onclick="checkout()">Thanh Toán</button>
+              <button class="dialog-mode-btn pay-btn" onclick="checkout()">
+                Thanh toán
+              </button>
+              <button class="dialog-mode-btn detail-btn">Chi tiết</button>
             </div>
           </div>
         </div>
