--- a/source/styles/cartDialog.css
+++ b/source/styles/cartDialog.css
@@ -1,61 +1,179 @@
+.bg-cart-dialog {
+  display: none;
+  position: absolute;
+  top: 100%;
+  right: 5px;
+  width: 400px;
+  height: 70px;
+}
+.bg-cart-dialog:hover {
+  display: block;
+}
+.bg-cart-dialog:hover ~ .cart-dialog {
+  display: block;
+}
+
 /* Style cho dialog */
 .cart-dialog {
-  display: none; /* Ẩn dialog ban đầu */
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5); /* Màu nền mờ */
-  z-index: 1000;
-  justify-content: center;
-  align-items: center;
+  display: none;
+  position: absolute;
+  top: 100%;
+  right: 5px;
+  width: 400px;
+  height: auto;
+  background-color: #fff;
+  padding: 10px;
+  margin-top: 20px !important;
+  border-radius: 10px;
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
+  z-index: 10;
+}
+
+.cart-dialog:hover {
+  display: block;
 }
 
 /* Nội dung của dialog */
 .dialog-content {
   background-color: white;
+  width: 100%;
+  max-height: 100%;
   padding: 20px;
-  width: 50%;
-  max-height: 80%;
-  overflow-y: auto; /* Cho phép cuộn khi nội dung dài */
   border-radius: 8px;
   position: relative;
 }
 
+.dialog-content .dialog-title {
+  width: 90%;
+  font-size: 22px;
+  padding-bottom: 10px;
+  border-bottom: #7a6c6c solid 1.5px;
+  margin-bottom: 20px;
+}
+
 /* Nút đóng */
-.cartDialog .close-btn {
+.cart-dialog .close-dialog-btn {
   position: absolute;
-  top: 10px;
-  right: 20px;
-  font-size: 30px;
-  color: #aaa;
+  top: 5px;
+  right: 5px;
   cursor: pointer;
 }
 
-.cartDialog .close-btn:hover {
-  color: #000;
+.cart-dialog .close-dialog-btn:hover {
+  transform: translate(1.1);
 }
 
 /* Đoạn nội dung giỏ hàng */
 #cartItems {
   margin-bottom: 20px;
+  min-height: 30px;
+  font-weight: 200;
+  max-height: 400px;
+  overflow-y: auto;
 }
 
 /* Footer dialog */
-.cartDialog .dialog-footer {
+.cart-dialog .dialog-footer {
   display: flex;
   justify-content: space-between;
 }
 
-.cartDialog .dialog-footer button {
+.cart-dialog .dialog-footer .dialog-mode-btn {
+  display: inline-block !important;
+  width: 100%;
+  margin: 10px 5px;
   padding: 10px 20px;
   font-size: 16px;
-  border: none;
   cursor: pointer;
   border-radius: 5px;
+  transition: background-color 0.3s;
 }
 
-.cartDialog .dialog-footer button:hover {
-  background-color: #ddd;
+.cart-dialog .pay-btn {
+  background-color: #000;
+  color: #fff;
+}
+
+.cart-dialog .detail-btn {
+  border: 1px solid #000;
+  background-color: #fff;
+}
+
+.cart-dialog .detail-btn:hover {
+  background-color: #fea352;
+}
+
+.cart-dialog .pay-btn:hover {
+  background-color: #786565;
+}
+
+.cart-product {
+  display: inline-flex;
+  background-color: #fff;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  margin: 10px 0 !important;
+}
+
+.cart-product .cart-product-image {
+  max-width: 20%;
+  height: auto;
+  border-radius: 8px;
+  margin-right: 15px;
+  flex: 1;
+}
+
+.cart-product-info {
+  width: 70%;
+  flex: 1;
+  margin-top: 10px !important;
+}
+
+.product-title {
+  font-size: 15px;
+  font-weight: bold;
+  margin: 0;
+  color: #333;
+}
+
+.product-size {
+  font-size: 14px;
+  font-weight: 400;
+  color: #777;
+  margin: 5px 0;
+}
+
+.product-price {
+  font-size: 14px;
+  color: #e74c3c;
+  font-weight: bold;
+}
+
+.close-btn {
+  background: none;
+  border: none;
+  height: 15px;
+  font-size: 35px;
+  color: #343232;
+  cursor: pointer;
+  transition: 0.3s ease;
+}
+
+.close-btn:hover {
+  color: #f39c12;
+}
+
+.cart-total {
+  font-size: 22px;
+  font-weight: 400;
+  display: flex;
+  width: 100%;
+  margin-top: 20px !important;
+}
+
+#total-value-cart {
+  width: 100%;
+  display: flex;
+  text-decoration: underline;
+  justify-content: end;
+  margin-bottom: 0 !important;
 }
